:construction: Optimize custom detection